// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedItem should render successfully 1`] = `
.c0 {
  --itemSize: 50px;
  top: 0px;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  animation: 16s horizontal-movement 2s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  transform-origin: top left;
  display: grid;
  place-items: start center;
  --vertical-slide: 16px;
  animation: 6s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 5;
  transform-origin: center;
}

.c2::after {
  content: '';
  width: var(--itemSize);
  height: var(--itemSize);
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #2392e8;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimatedItem should render successfully with a rotation and no path 1`] = `
.c0 {
  --itemSize: 50px;
  top: 0px;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  animation: 16s horizontal-movement 2s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  transform-origin: top left;
  display: grid;
  place-items: start center;
  --vertical-slide: 16px;
  animation: 6s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 5;
  transform-origin: center;
  --rotation: calc(               2 * 360deg             );
  animation: 3s rotate-movement linear infinite;
}

.c2::after {
  content: '';
  width: var(--itemSize);
  height: var(--itemSize);
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #2392e8;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;
